# rnm

./: LICENSE  README.md  flake.nix  meson.build
include/rnm/: format.hpp  mat.hpp  mat_operations.hpp  mat_transformations.hpp  rnm.hpp  vec.hpp
include/rnm/detail/: base.hpp  common.hpp  mat.hpp  mat_operations.hpp  mat_transformations.hpp  vec.hpp
tests/: mat_tests.cpp  vec_tests.cpp
